--- a/problem/templates/problem/problem_list.html
+++ b/problem/templates/problem/problem_list.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <table class="table table-striped table-hover">
   <thead>
       <tr>
@@ -13,10 +14,11 @@
       <tr>
         <td>
           {% if user == p.owner or user.has_admin_auth %}
-            <!-- <button class="btn btn-info btn-xs" data-toggle="tooltip" -->
-            <!--     data-pacement="top" title="Rejudge Problem"> -->
-            <!--   <span id='rejudge' class='glyphicon glyphicon-refresh'></span> -->
-            <!-- </button> -->
+	    <a class="btn btn-info btn-xs rejudge-btn"  href="{% url 'problem:rejudge' %}?pid={{ p.pk }}"
+		    data-toggle="tooltip" data-pacement="top" title="Rejudge Problem"
+		    data-submission="{{ p.total_submission }}">
+              <span id='rejudge' class='glyphicon glyphicon-refresh'></span>
+            </a>
             <a class="del_btn" href="{% url 'problem:delete_problem' p.pk %}">
               <button type="button" class="btn btn-danger btn-xs" data-toggle="tooltip"
                     data-placement="top" title="Delete Problem">
@@ -52,14 +54,6 @@
     {% endfor %}
   </tbody>
 </table>
-<script>
-$(document).ready(function () {
-  $('[data-toggle="tooltip"]').tooltip();
-  $('.progress').css('overflow', 'inherit');
-  $('.del_btn').click(function () {
-      return confirm("Are you sure you want to delete?");
-  });
-});
-</script>
+<script src="{% static 'problem/js/panel.js' %}"></script>
 
 {% include "utils/pager.html" with objects=problem %}
