--- a/problem/templates/problem/problem_list.html
+++ b/problem/templates/problem/problem_list.html
@@ -19,7 +19,7 @@
 		    data-submission="{{ p.total_submission }}">
               <span id='rejudge' class='glyphicon glyphicon-refresh'></span>
             </a>
-            <a class="del_btn" href="{% url 'problem:delete_problem' p.pk %}">
+            <a class="del-btn" href="{% url 'problem:delete_problem' p.pk %}">
               <button type="button" class="btn btn-danger btn-xs" data-toggle="tooltip"
                     data-placement="top" title="Delete Problem">
                 <span class="glyphicon glyphicon-remove"></span>
