--- a/group/templates/group/groupDetail.html
+++ b/group/templates/group/groupDetail.html
@@ -131,7 +131,7 @@
                 <button type="button" class="btn btn-primary btn-sm" 
                         data-toggle="modal" style="float:right" 
                         data-target="#addannounce">
-                  Add announce
+                  <span class="glyphicon glyphicon-plus"></span>
                 </button>
                 {% include "group/addAnnounce.html" with group=group %}
               {% endif %}
