fix is_frozen bug

--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -25,7 +25,7 @@
           </button>
         </a>
         {% endif %}
-        {% if contest|is_freezed %}
+        {% if contest|is_frozen %}
         <h4>
           <span class="label label-danger">Frozen</span>
           *Frozen contest will not update scoreboard until the contest ends.
