--- a/contest/templates/contest/scoreboard.html
+++ b/contest/templates/contest/scoreboard.html
@@ -1,6 +1,6 @@
 {% load staticfiles %} {% load contest_extras %}
 <h3>{{ contest.cname }}</h3>
-{% if contest|is_freezed %}
+{% if contest|is_frozen %}
 <span class="label label-danger">Frozen</span>
 *Frozen contest will not update scoreboard until the contest ends.
 {% endif %}
