fix naming style

--- a/group/templates/group/addAnnounce.html
+++ b/group/templates/group/addAnnounce.html
@@ -3,7 +3,7 @@
 {% block import_source %}
 <script src="{%static 'group/js/addAnnounce.js'%}"></script>
 {% endblock import_source %}
-<div class="modal fade" id="addannounce" tabindex="-1" role="dialog">
+<div class="modal fade" id="addAnnounce" tabindex="-1" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
