--- a/group/templates/group/groupDetail.html
+++ b/group/templates/group/groupDetail.html
@@ -130,7 +130,7 @@
               {% if user_has_auth %}
                 <button type="button" class="btn btn-primary btn-sm" 
                         data-toggle="modal" style="float:right" 
-                        data-target="#addannounce">
+                        data-target="#addAnnounce">
                   <span class="glyphicon glyphicon-plus"></span>
                 </button>
                 {% include "group/addAnnounce.html" with group=group %}
