linebreak for announce content

--- a/group/templates/group/groupDetail.html
+++ b/group/templates/group/groupDetail.html
@@ -174,7 +174,7 @@
                     </div> 
                     <div class="modal-body">
                       <p id="modal-content" style="word-wrap:break-word">
-                        {{ announce.content }}
+                        {{ announce.content|linebreaks }}
                       </p>
                     </div>
                     <div class="modal-footer">
