linebreak for group description

--- a/group/templates/group/groupDetail.html
+++ b/group/templates/group/groupDetail.html
@@ -28,7 +28,7 @@
   <div class="container-fluid">
     <div class="Description" style="float:left">
       <p style="font-size:16px; color:gray; word-wrap:break-word">
-        {{ group.description }}
+        {{ group.description|linebreaks }}
       </p>
     </div>
   </div>
