group new/delete/edit, fix announce form size

--- a/group/templates/group/groupList.html
+++ b/group/templates/group/groupList.html
@@ -3,6 +3,9 @@
 {% block title_name %}
 <title>Group List</title>
 {% endblock title_name %}
+{% block import_source %}
+<script src="{%static 'group/js/editAnnounce.js'%}"></script>
+{% endblock import_source %}
 {% load group_extras %}
 {% block body_block %}
 <br>
