fix announce delete/edit button position

--- a/group/templates/group/groupDetail.html
+++ b/group/templates/group/groupDetail.html
@@ -191,18 +191,20 @@
             </td>
             <td>
               {% if user_has_auth %}
-              <a href="{% url 'group:edit_announce' announce.id group.id redirect_page %}">
-                <button type="button" class="btn btn-warning btn-sm" 
-                        data-toggle="modal" style="float:right">
-                  <span class="glyphicon glyphicon-pencil"></span>
-                </button>
-              </a>
-              <a href="{% url 'group:delete_announce' announce.id group.id %}">
-                <button type="button" class="btn btn-danger btn-sm" 
-                        style="float:right" onclick="return confirm_delete()">
-                  <span class="glyphicon glyphicon-remove"></span>
-                </button>
-              </a>
+              <div style="float:right">
+                <a href="{% url 'group:edit_announce' announce.id group.id redirect_page %}">
+                  <button type="button" class="btn btn-warning btn-sm" 
+                          data-toggle="modal">
+                    <span class="glyphicon glyphicon-pencil"></span>
+                  </button>
+                </a>
+                <a href="{% url 'group:delete_announce' announce.id group.id %}">
+                  <button type="button" class="btn btn-danger btn-sm" 
+                          onclick="return confirm_delete()">
+                    <span class="glyphicon glyphicon-remove"></span>
+                  </button>
+                </a>
+              </div>
               {% endif %}
             </td>
           </tr>
