--- a/status/templates/status/statusTable.html
+++ b/status/templates/status/statusTable.html
@@ -34,6 +34,11 @@
           {% else %}
             {{ submission.grouper.id }}
           {% endif %}
+          {% if submission.grouper|can_rejudge:user %}
+            <a href={% url "status:view_code" submission.grouper.id %}>
+              <span id="rejudge" class="glyphicon glyphicon-refresh"></span>
+            </a>
+          {% endif %}
         </td>
         <td>{{ submission.grouper.submit_time }}</td>
         <td>
