--- a/group/templates/group/editGroup.html
+++ b/group/templates/group/editGroup.html
@@ -18,7 +18,7 @@
 <br>
 <br>
 <div class="col-lg-offset-1 col-lg-10">
-  <h2>#{{ group.id }} - {{ group.gname }}</h2>
+  <h2>{{ group.id }} - {{ group.gname }}</h2>
   <div class="well">
     <form action="." method="POST">
       {% csrf_token %}
