slightly change template

--- a/group/templates/group/editGroup.html
+++ b/group/templates/group/editGroup.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title_name %}
 {% if group %}
-<title>Edit for #{{ group.id }}...</title>
+<title>Edit for {{ group.gname }}...</title>
 {% else %}
 <title>New group...</title>
 {% endif %}
