slightly change template

--- a/group/templates/group/editGroup.html
+++ b/group/templates/group/editGroup.html
@@ -34,7 +34,8 @@
         {% endif %}
       {% endfor %}
       <br>
-      <input class="btn btn-sm btn-primary" type="submit" style="float:right" value="Comfirm">
+      <input class="btn btn-sm btn-primary" type="submit" style="float:right" value="Save">
+      <br>
       <br>
     </form>
   </div>
