breakline if word is too long

--- a/group/templates/group/groupDetail.html
+++ b/group/templates/group/groupDetail.html
@@ -26,8 +26,8 @@
   </div>
   <hr>
   <div class="container-fluid">
-    <div class="Description" style="float:left">
-      <p style="font-size:16px; color:gray; word-wrap:break-word">
+    <div class="Description" style="word-break:break-all">
+      <p style="font-size:16px; color:gray">
         {{ group.description|linebreaks }}
       </p>
     </div>
