--- a/group/templates/group/groupDetail.html
+++ b/group/templates/group/groupDetail.html
@@ -174,8 +174,8 @@
                       </h3>
                       {% endif %}
                     </div> 
-                    <div class="modal-body">
-                      <p id="modal-content" style="word-wrap:break-word">
+                    <div class="modal-body" style="word-break:break-all">
+                      <p id="modal-content">
                         {{ announce.content|linebreaks }}
                       </p>
                     </div>
