--- a/group/templates/group/viewall.html
+++ b/group/templates/group/viewall.html
@@ -67,8 +67,8 @@
                   </h3>
                   {% endif %}
                 </div> 
-                <div class="modal-body">
-                  <p id="modal-content" style="word-wrap:break-word">
+                <div class="modal-body" style="word-break:break-all">
+                  <p id="modal-content">
                     {{ archive.content|linebreaks }}
                   </p>
                 </div>
