fix time format

--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -110,7 +110,7 @@
         <div class="navbar-collapse collapse">
           <p class="navbar-text col-lg-4">Contact us: nthucsoj@gmail.com</p>
           <p class="navbar-text col-lg-6">© NTHU Online Judge 2015, Templates are from Bootswatch Project</p>
-          <p id="time" class="navbar-text">{% now 'Y/m/d f:s' %}</p>
+          <p id="time" class="navbar-text">{% now "Y/m/d H:i:s" %}</p>
         </div>
       </div>
     </footer>
