--- a/contest/templates/contest/overview.html
+++ b/contest/templates/contest/overview.html
@@ -10,7 +10,7 @@
     </tr>
   </thead>
   <tbody>
-    {% for problem in scoreboard.problems %}
+    {% for problem in contest.problems %}
     <tr>
       <td>{{ problem.id }}</td>
       <td>
