--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -16,18 +16,30 @@
   <!-- logo -->
   <div id="logo" class="center">
   <div class="jumbotron" id="logo-content">
-    <h1>NTHUOJ</h1>
-    <hr>
-      <p>
-      This is National Tsing Hua University Online Judge, an ACM-like
-      online judge designed for training purposes and a platform of
-      contest. You may utilize this site by the links on the side bar and
-      top-right corner. Each of them will redirect you to a page with
-      the following functions.
-    </p>
+    <div id="OJ"  style="display: none;">
+        <h1>NTHUOJ</h1>
+        <hr>
+          <p>
+          This is National Tsing Hua University Online Judge, an ACM-like
+          online judge designed for training purposes and a platform of
+          contest. You may utilize this site by the links on the side bar and
+          top-right corner. Each of them will redirect you to a page with
+          the following functions.
+        </p>
+    </div>
+    <div id="Jinkela"  style="display: none;">
+        <h1>金坷垃</h1>
+        <hr>
+          <p>
+          金坷垃是一种肥料添加剂。其电视广告在2007年左右在一些地区电视台中播出，
+          因其出众的戏剧性而成为一种网络文化。初期主要呈现形式为知名歌曲恶搞翻唱，
+          经过长久的发展已经被赋予了丰富的娱乐、文化和音乐内涵。
+          在众多优秀的UP主的努力之下，相关技术大幅推进，作品质量也随之提高。
+          而“舍妹遥相望，神佛覆犬灵”更是广为流传的标志性语句。
+        </p>
+    </div>
   </div>
   </div>
-
   <!-- announcement -->
   <div id="announcement" class="center">
     <h3 style="display: inline;"><b>Announcements</b></h3>
@@ -66,6 +78,18 @@
       </tbody>
     </table>
   </div>
+  <!-- js -->
+  <script>
+        var data=new Date();
+        var month=4-1,date=1;
+        //month=2,date=25;
+        //這是今天日期，測試用
+        if(data.getMonth()==month&&data.getDate()==date){
+            $('#Jinkela').show();
+        }else{
+            $('#OJ').show();
+        }
+    </script>
   <!-- contest -->
   <div id="contest" class="center">
     <h3><b>Running / Upcoming Contest</b></h3>
