fix pager.js  paramAll() not found

--- a/utils/templates/utils/pager.html
+++ b/utils/templates/utils/pager.html
@@ -29,5 +29,5 @@
     </span>
   </ul>
 </form>
-<script src={% static "jquery.url.min/index.js" %}></script>
+<script src={% static "js-url/url.min.js" %}></script>
 <script src={% static "js/pager.js" %}></script>
