--- a/problem/static/problem/css/problem.css
+++ b/problem/static/problem/css/problem.css
@@ -58,3 +58,8 @@ SOFTWARE.
   display:inline-block;
   margin-bottom: 20px;
 }
+.sampleIO {
+  resize: none;
+  width: 100%;
+  overflow: hidden;
+}
