--- a/problem/templates/problem/problem.html
+++ b/problem/templates/problem/problem.html
@@ -65,20 +65,12 @@
   <h3>Output</h3>
   {{ problem.output | safe }}
   <h3>Sample Input</h3>
-  <div class='panel panel-default'>
-    <div class='panel-body'>
-      <samp id='sampinText'>{{ problem.sample_in|linebreaksbr }}</samp>
-      <br>
-      <span class='label label-danger'>EOF</span>
-    </div>
+  <div class='panel-body'>
+    <textarea id='{{ problem.pk }}_sampleIn' class='panel-body sampleIO' readonly>{{ problem.sample_in }}</textarea>
   </div>
   <h3>Sample Output</h3>
-  <div class='panel panel-default'>
-    <div class='panel-body'>
-      <samp id='sampoutText' name='sampoutText'>{{ problem.sample_out|linebreaksbr }}</samp>
-      <br>
-      <span class='label label-danger'>EOF</span>
-    </div>
+  <div class='panel-body'>
+    <textarea id='{{ problem.pk }}_sampleOut' class='panel-body sampleIO' readonly>{{ problem.sample_out }}</textarea>
   </div>
   {% if problem.judge_type == "LOCAL_PARTIAL" and problem.has_partial_judge_code %}
     <h3>Partial Judge Code</h3>
