should load problem.css when rendering contest.html

--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -6,6 +6,7 @@
 
 {% block import_source %}
 <link href="{% static 'contest/css/contest.css' %}" rel="stylesheet">
+<link href="{% static 'problem/css/problem.css' %}" rel="stylesheet">
 <script src="{% static 'contest/js/contest.js'%}"></script>
 {% endblock import_source %}
 
