add button for dowloading sample I/O

--- a/problem/templates/problem/problem.html
+++ b/problem/templates/problem/problem.html
@@ -64,11 +64,11 @@
   {{ problem.input | safe }}
   <h3>Output</h3>
   {{ problem.output | safe }}
-  <h3>Sample Input</h3>
+  <h3>Sample Input&nbsp;&nbsp;<a class='btn btn-primary downloadSampleInputButton' pid='{{ problem.pk }}'>Download</a></h3>
   <div class='panel-body'>
     <textarea id='{{ problem.pk }}_sampleIn' class='panel-body sampleIO' readonly>{{ problem.sample_in }}</textarea>
   </div>
-  <h3>Sample Output</h3>
+  <h3>Sample Output&nbsp;&nbsp;<a class='btn btn-primary downloadSampleOutputButton' pid='{{ problem.pk }}'>Download</a></h3>
   <div class='panel-body'>
     <textarea id='{{ problem.pk }}_sampleOut' class='panel-body sampleIO' readonly>{{ problem.sample_out }}</textarea>
   </div>
