--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -6,6 +6,7 @@
 
 {% block import_source %}
 <link href="{% static 'contest/css/contest.css' %}" rel="stylesheet">
+<link href="{% static 'problem/css/problem.css' %}" rel="stylesheet">
 <script src="{% static 'contest/js/contest.js'%}"></script>
 {% endblock import_source %}
 
@@ -17,7 +18,6 @@
     <!--Title-->
     <div class="well">
       <h2>{{ contest.id }} - {{ contest.cname }}
-        <a class="btn btn-info" href="{% url 'contest:scoreboard' contest.id %}">Scoreboard</a>
         {% if user|can_edit_contest:contest %}
         <a href="{% url 'contest:edit' contest.id %}">
           <button type="button" class="btn btn-warning btn-sm" data-toggle="tooltip"
@@ -131,6 +131,8 @@
             {% endfor %}
           </ul>
         </li>
+        <li role="presentation"><a href="#scoreboard" role="tab" data-toggle="tab">Scoreboard</a>
+        </li>
       </ul>
       <div class="tab-content" id="content">
         <div class="tab-pane active" id="overview">
@@ -142,7 +144,7 @@
         </div>
         {% endfor %}
         <div class="tab-pane" id="scoreboard">
-          {% include "contest/scoreboardTable.html" %}
+          {% include "contest/scoreboard.html" %}
         </div>
       </div>
     </div>
